[project]
name = "cgse"
version = "2024.1.0"
description = "Generic Common-EGSE: Commanding and monitoring lab equipment"
authors = [
    {name = "Rik Huygen", email = "rik.huygen@kuleuven.be"},
    {name = "Sara Regibo", email = "sara.regibo@kuleuven.be"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pipdeptree", "tomlkit", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
