[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["egse"]
namespaces = true

[tool.setuptools.package-data]
egse = ["*.yaml"]

[project]
name = "plato-spw"
version = "2023.1.0"
description = "SpaceWire implementation for CGSE"
license = { text = "Common-EGSE Software License Agreement" }
dependencies = [
    "cgse-common",
    "numpy",
]

[project.entry-points."cgse.version"]
plato-spw = 'egse.plugins'
