[project]
name = "cgse-gui"
version = "0.25.6"
description = "GUI components for CGSE"
authors = [
    {name = "Rik Huygen", email = "rik.huygen@kuleuven.be"},
    {name = "Sara Regibo", email = "sara.regibo@kuleuven.be"}
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "CGSE",
    "Common-EGSE",
    "GUI",
]
dependencies = [
    "cgse-common",
    "PyQt5>=5.15.11",
]

[project.entry-points."cgse.version"]
cgse-gui = 'egse.version:get_version_installed'

[project.entry-points."cgse.resource"]
icons = 'egse.gui.icons'
styles = 'egse.gui.styles'

[tool.hatch.build.targets.sdist]
exclude = []

[tool.hatch.build.targets.wheel]
packages = ["src/egse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/IvS-KULeuven/cgse/tree/main/libs/cgse-gui"
Repository = "https://github.com/IvS-KULeuven/cgse"
Releases = "https://github.com/IvS-KULeuven/cgse/releases"
Changelog = "https://github.com/IvS-KULeuven/cgse/blob/main/CHANGELOG.md"
Documentation = "https://ivs-kuleuven.github.io/cgse/"
