[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["egse.tools", "scripts"]
namespaces = true

[tool.setuptools.package-data]
egse = ["*.yaml"]

[project]
name = "cgse-tools"
version = "2023.1.0"
description = "Tools for CGSE"
license = { text = "Common-EGSE Software License Agreement" }
dependencies = [
    "cgse-core",
    "textual",
    "rich",
]

[project.scripts]
cgse-status = "egse.tools.status:main"

[project.entry-points."cgse.version"]
cgse-tools = 'egse.tools'

# Examples of how to provide plugins for the `cgse` command

[project.entry-points."cgse.plugins"]
foo = 'scripts.cgse_plugins:foo'

[project.entry-points."cgse.service.plugins"]
xxx = 'scripts.cgse_service_plugins:xxx'
