[project]
name = "ivs_tvac"
version = "0.25.7"
description = "Thermal Vacuum Chamber"
authors = [
    {name = "IvS KU Leuven"}
]
maintainers = [
    {name = "Rik Huygen", email = "rik.huygen@kuleuven.be"},
    {name = "Sara Regibo", email = "sara.regibo@kuleuven.be"}
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "CGSE",
    "Common-EGSE",
    "hardware testing",
    "software framework",
]
dependencies = [
    "cgse-common",
    "cgse-core",
    "asyncua>=1.1.8",
]

[project.optional-dependencies]
test = ["pytest", "pytest-mock", "pytest-cov"]

[project.scripts]
tvac = "egse.ivs.tvac.async_tvac:app"

##[project.gui-scripts]
##tgf4000_ui = "egse.arbitrary_wave_generator.aim_tti.tgf4000_ui:main"

[project.entry-points."cgse.version"]
ivs-tvac = 'egse.version:get_version_installed'

[project.entry-points."cgse.settings"]
ivs-tvac = "ivs_tvac:settings.yaml"

[project.entry-points."cgse.service.device_command"]
tvac = 'ivs_tvac.cgse_services:tvac'

[project.entry-points."cgse.explore"]
explore = "ivs_tvac.cgse_explore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/tests",
    "/pytest.ini",
    "/.gitignore",
]

[tool.hatch.build.targets.wheel]
packages = ["src/egse", "src/ivs_tvac"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.9.0",
    "nox>=2025.2.9",
    "ipython",
]
