[tool.poetry]
name = "plato-fits"
version = "2024.1.0"
description = "FITS plugin for the CGSE storage manager"
authors = [
    "Rik Huygen <rik.huygen@kuleuven.be>",
    "Sara Regibo <sara.regibo@kuleuven.be>",
]
readme = "README.md"
#packages = [
#    { include = "egse", from = "src" },
#]

[tool.poetry.dependencies]
python = "^3.8"
cgse-common = {path = "../../../libs/cgse-common", develop = true}  # this shall be replaced when building

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pipdeptree = "^2.13.0"
tomlkit = "^0.12.3"

[tool.poetry.plugins."cgse.version"]
plato-fits = 'egse.storage.plugins'

[tool.poetry.plugins."cgse.storage.persistence"]
FITS = "egse.plugins.storage.fits:FITS"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
